--- a/Angular/src/app/pages/user/user.component.scss
+++ b/Angular/src/app/pages/user/user.component.scss
@@ -698,7 +698,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 25px;
+      // margin-bottom: 25px;
       
       .avatar-container {
         position: relative;
