Fixed some bugs on ticket roles management

--- a/Angular/src/app/pages/ticket-management/ticket-management.component.css
+++ b/Angular/src/app/pages/ticket-management/ticket-management.component.css
@@ -2051,7 +2051,8 @@
   background: #f8f9fa;
   width: 100%;
   box-sizing: border-box;
-  margin-left: 0;  
+  margin-left: 0;
+  margin-top: 10px;  
 }
 
 .attachment-drop-zone:hover {
